# qjob

./: README.md  meta.yaml  setup.cfg
docs/: conf.py  index.rst  installation.rst  troubleshooting.rst  tutorial.rst
src/qjob/: __init__.py  cli.py
