[metadata]
name = qjob
version = 0.0.1
author = Marco Mariotti
author_email = marco.mariotti@ub.edu
description = Utility to split shell commands into jobs, then submit them for computation to a queue of a SGE or Slurm cluster.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/marco-mariotti/qjob
project_urls =
https://github.com/marco-mariotti
    Github Website=https://github.com/marco-mariotti/qjob

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6,<3.10
install_requires =
    more_itertools
    
[options.packages.find]
where = src
